force-app/main/default/objects/Lead/fields/Add_a_2nd_Policy__c.field-meta.xml
<CustomField>
    <fullName>Add_a_2nd_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add a 2nd Policy</label>
    <type>Checkbox</type>
</CustomField>