force-app/main/default/objects/Lead/fields/Additional_Income3__c.field-meta.xml
<CustomField>
    <fullName>Additional_Income3__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Additional Income 3</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>