force-app/main/default/objects/Lead/fields/Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Affiliation__c</fullName>
    <label>Affiliation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Affiliation</valueSetName>
    </valueSet>
</CustomField>