force-app/main/default/objects/Lead/fields/Age_Option_A_Manual__c.field-meta.xml
<CustomField>
    <fullName>Age_Option_A_Manual__c</fullName>
    <label>Age Option A Manual</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under 35</fullName>
            </value>
            <value>
                <fullName>35-39</fullName>
            </value>
            <value>
                <fullName>40-44</fullName>
            </value>
            <value>
                <fullName>45-49</fullName>
            </value>
            <value>
                <fullName>50-54</fullName>
            </value>
            <value>
                <fullName>55-59</fullName>
            </value>
            <value>
                <fullName>60+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>