force-app/main/default/objects/Lead/fields/Age_Option_Basic_Manual__c.field-meta.xml
<CustomField>
    <fullName>Age_Option_Basic_Manual__c</fullName>
    <label>Age Option Basic Manual</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under 35</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
            <value>
                <fullName>37</fullName>
            </value>
            <value>
                <fullName>38</fullName>
            </value>
            <value>
                <fullName>39</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
            <value>
                <fullName>41</fullName>
            </value>
            <value>
                <fullName>42</fullName>
            </value>
            <value>
                <fullName>43</fullName>
            </value>
            <value>
                <fullName>44</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>