force-app/main/default/objects/Lead/fields/AgeFactorformula_OptionB_Text__c.field-meta.xml
<CustomField>
    <fullName>AgeFactorformula_OptionB_Text__c</fullName>
    <label>AgeFactorformula_OptionB Text</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>