force-app/main/default/objects/Lead/fields/AgeFactorformula_OptionC__c.field-meta.xml
<CustomField>
    <fullName>AgeFactorformula_OptionC__c</fullName>
    <formula>if(
(NOT(ISPICKVAL(FEGLI_Code_Picklist__c, &apos;--&apos;)) &amp;&amp; Contact_Age__c &lt;= 35) || (ISPICKVAL(FEGLI_Code_Picklist__c, &apos;--&apos;) &amp;&amp; ISPICKVAL(Age_Option_C_Manual__c, &apos;Under 35&apos;)),
 $CustomMetadata.FEGLI_Mapping__mdt.OptionC_34_BiWeekly.Factor__c ,

if(
(NOT(ISPICKVAL(FEGLI_Code_Picklist__c, &apos;--&apos;)) &amp;&amp; Contact_Age__c &gt;= 35 &amp;&amp; Contact_Age__c &lt;= 39) || ISPICKVAL(Age_Option_C_Manual__c, &apos;35-39&apos;),
$CustomMetadata.FEGLI_Mapping__mdt.OptionC_39_BiWeekly.Factor__c ,

if(
(NOT(ISPICKVAL(FEGLI_Code_Picklist__c, &apos;--&apos;)) &amp;&amp; Contact_Age__c &gt;= 40 &amp;&amp; Contact_Age__c &lt;= 44) || ISPICKVAL(Age_Option_C_Manual__c, &apos;40-44&apos;),
$CustomMetadata.FEGLI_Mapping__mdt.OptionC_44_BiWeekly.Factor__c ,

if(
(NOT(ISPICKVAL(FEGLI_Code_Picklist__c, &apos;--&apos;)) &amp;&amp; Contact_Age__c &gt;= 45 &amp;&amp; Contact_Age__c &lt;= 49) || ISPICKVAL(Age_Option_C_Manual__c, &apos;45-49&apos;),
$CustomMetadata.FEGLI_Mapping__mdt.OptionC_49_BiWeekly.Factor__c ,

if(
(NOT(ISPICKVAL(FEGLI_Code_Picklist__c, &apos;--&apos;)) &amp;&amp; Contact_Age__c &gt;= 50 &amp;&amp; Contact_Age__c &lt;= 54) || ISPICKVAL(Age_Option_C_Manual__c, &apos;50-54&apos;),
$CustomMetadata.FEGLI_Mapping__mdt.OptionC_54_BiWeekly.Factor__c ,

if(
(NOT(ISPICKVAL(FEGLI_Code_Picklist__c, &apos;--&apos;)) &amp;&amp; Contact_Age__c &gt;= 55 &amp;&amp; Contact_Age__c &lt;= 59) || ISPICKVAL(Age_Option_C_Manual__c, &apos;55-59&apos;),
$CustomMetadata.FEGLI_Mapping__mdt.OptionC_59_BiWeekly.Factor__c ,

if(
(NOT(ISPICKVAL(FEGLI_Code_Picklist__c, &apos;--&apos;)) &amp;&amp; Contact_Age__c &gt;= 60 &amp;&amp; Contact_Age__c &lt;= 64) || ISPICKVAL(Age_Option_C_Manual__c, &apos;60-64&apos;),
$CustomMetadata.FEGLI_Mapping__mdt.OptionC_64_BiWeekly.Factor__c ,

if(
(NOT(ISPICKVAL(FEGLI_Code_Picklist__c, &apos;--&apos;)) &amp;&amp; Contact_Age__c &gt;= 65 &amp;&amp; Contact_Age__c &lt;= 69) || ISPICKVAL(Age_Option_C_Manual__c, &apos;65-69&apos;),
$CustomMetadata.FEGLI_Mapping__mdt.OptionC_69_BiWeekly.Factor__c ,

if(
(NOT(ISPICKVAL(FEGLI_Code_Picklist__c, &apos;--&apos;)) &amp;&amp; Contact_Age__c &gt;= 70 &amp;&amp; Contact_Age__c &lt;= 74) || ISPICKVAL(Age_Option_C_Manual__c, &apos;70-74&apos;),
$CustomMetadata.FEGLI_Mapping__mdt.OptionC_74_BiWeekly.Factor__c ,

if(
(NOT(ISPICKVAL(FEGLI_Code_Picklist__c, &apos;--&apos;)) &amp;&amp; Contact_Age__c &gt;= 75 &amp;&amp; Contact_Age__c &lt;= 79) || ISPICKVAL(Age_Option_C_Manual__c, &apos;75-79&apos;),
$CustomMetadata.FEGLI_Mapping__mdt.OptionC_79_BiWeekly.Factor__c ,

if(
(NOT(ISPICKVAL(FEGLI_Code_Picklist__c, &apos;--&apos;)) &amp;&amp; Contact_Age__c &gt;= 80) || ISPICKVAL(Age_Option_C_Manual__c, &apos;80+&apos;),
 $CustomMetadata.FEGLI_Mapping__mdt.OptionC_80_BiWeekly.Factor__c, 

0
)))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AgeFactorformula_OptionC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>