force-app/main/default/objects/Lead/fields/AgeFactorformula_OptionC_Text__c.field-meta.xml
<CustomField>
    <fullName>AgeFactorformula_OptionC_Text__c</fullName>
    <label>AgeFactorformula_OptionC Text</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>