force-app/main/default/objects/Lead/fields/Annual_Leave__c.field-meta.xml
<CustomField>
    <fullName>Annual_Leave__c</fullName>
    <label>Annual Leave</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>