force-app/main/default/objects/Lead/fields/AnnualWithdraw1__c.field-meta.xml
<CustomField>
    <fullName>AnnualWithdraw1__c</fullName>
    <label>Annual Withdraw 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>taxRate1</valueSetName>
    </valueSet>
</CustomField>