force-app/main/default/objects/Lead/fields/Annuity_Task_Generated__c.field-meta.xml
<CustomField>
    <fullName>Annuity_Task_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Annuity Task Generated</label>
    <type>Checkbox</type>
</CustomField>