force-app/main/default/objects/Lead/fields/Appointment_Results__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Results__c</fullName>
    <label>Appointment Results</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SALE</fullName>
            </value>
            <value>
                <fullName>NO SALE</fullName>
            </value>
            <value>
                <fullName>NO OPPORTUNITY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>