force-app/main/default/objects/Lead/fields/Appointment_Time__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Time__c</fullName>
    <label>Appointment Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Time_Picklist</valueSetName>
    </valueSet>
</CustomField>