force-app/main/default/objects/Lead/fields/Apt__c.field-meta.xml
<CustomField>
    <fullName>Apt__c</fullName>
    <label>Apt</label>
    <length>15</length>
    <type>Text</type>
</CustomField>