force-app/main/default/objects/Lead/fields/Base_Salary__c.field-meta.xml
<CustomField>
    <fullName>Base_Salary__c</fullName>
    <label>Base Salary</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>