force-app/main/default/objects/Lead/fields/Basic__c.field-meta.xml
<CustomField>
    <fullName>Basic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Basic</label>
    <type>Checkbox</type>
</CustomField>