force-app/main/default/objects/Lead/fields/BasicBiWeekly__c.field-meta.xml
<CustomField>
    <fullName>BasicBiWeekly__c</fullName>
    <formula>if(
Basic__c == true &amp;&amp; NOT(ISPICKVAL( Affiliation__c, &apos;United States Postal Service (USPS)&apos;)), ((0.3467 * ((formula_basePay__c + 2000) / 1000)) * 12) / 26, 

if(
Basic__c == true &amp;&amp; ISPICKVAL( Affiliation__c, &apos;United States Postal Service (USPS)&apos;), 0,

0

))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BasicBiWeekly</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>