force-app/main/default/objects/Lead/fields/Best_Day_of_the_Week_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Best_Day_of_the_Week_to_Contact__c</fullName>
    <label>Best Day of the Week to Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Day_of_the_Week</valueSetName>
    </valueSet>
</CustomField>