force-app/main/default/objects/Lead/fields/Birth_Month_Formula__c.field-meta.xml
<CustomField>
    <fullName>Birth_Month_Formula__c</fullName>
    <formula>CASE(
MONTH( Date_of_Birth__c ),
1, 1,
2, 2,
3, 3,
4, 4,
5, 5,
6, 6,
7, 7,
8, 8,
9, 9,
10, 10,
11, 11,
12
)</formula>
    <label>Birth Month Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>