force-app/main/default/objects/Lead/fields/BottomLine__c.field-meta.xml
<CustomField>
    <fullName>BottomLine__c</fullName>
    <formula>subTotal__c + IRA_401_k__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BottomLine</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>