force-app/main/default/objects/Lead/fields/Branch_No__c.field-meta.xml
<CustomField>
    <fullName>Branch_No__c</fullName>
    <label>Branch No.</label>
    <length>7</length>
    <type>Text</type>
</CustomField>