force-app/main/default/objects/Lead/fields/Call_Back_Date__c.field-meta.xml
<CustomField>
    <fullName>Call_Back_Date__c</fullName>
    <label>Call Back Date</label>
    <type>Date</type>
</CustomField>