force-app/main/default/objects/Lead/fields/Callback_Time__c.field-meta.xml
<CustomField>
    <fullName>Callback_Time__c</fullName>
    <label>Callback Time</label>
    <type>Time</type>
</CustomField>