force-app/main/default/objects/Lead/fields/Catchup_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Catchup_Contribution__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Catchup Contribution</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>