force-app/main/default/objects/Lead/fields/Chapter__c.field-meta.xml
<CustomField>
    <fullName>Chapter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chapter</label>
    <type>Checkbox</type>
</CustomField>