force-app/main/default/objects/Lead/fields/combined_Expenses__c.field-meta.xml
<CustomField>
    <fullName>combined_Expenses__c</fullName>
    <formula>formula_totalExpenses__c +  formula_totalExpenses_Spouse__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>combined Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>