force-app/main/default/objects/Lead/fields/Contact_Age__c.field-meta.xml
<CustomField>
    <fullName>Contact_Age__c</fullName>
    <description>Current age of the contact.  Calculated based on DOB.</description>
    <formula>IF( ISBLANK( Date_of_Birth__c ), 

Age__c,

FLOOR((TODAY() - Date_of_Birth__c ) / 365.25)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Current age of the contact.  Calculated based on DOB.</inlineHelpText>
    <label>Contact Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>