force-app/main/default/objects/Lead/fields/CSRS__c.field-meta.xml
<CustomField>
    <fullName>CSRS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSRS</label>
    <type>Checkbox</type>
</CustomField>