force-app/main/default/objects/Lead/fields/CSRS_Annuity_Retirement__c.field-meta.xml
<CustomField>
    <fullName>CSRS_Annuity_Retirement__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>CSRS Annuity Retirement</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>