force-app/main/default/objects/Lead/fields/CSRS_Offset__c.field-meta.xml
<CustomField>
    <fullName>CSRS_Offset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSRS Offset</label>
    <type>Checkbox</type>
</CustomField>