force-app/main/default/objects/Lead/fields/currentNET__c.field-meta.xml
<CustomField>
    <fullName>currentNET__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>currentNET</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>