force-app/main/default/objects/Lead/fields/Date_Turning_59__c.field-meta.xml
<CustomField>
    <fullName>Date_Turning_59__c</fullName>
    <label>Date Turning 59 1/2</label>
    <type>Date</type>
</CustomField>