force-app/main/default/objects/Lead/fields/Date_Turning_59_formula__c.field-meta.xml
<CustomField>
    <fullName>Date_Turning_59_formula__c</fullName>
    <formula>ADDMONTHS(DATE(YEAR(Date_of_Birth__c)+59, MONTH(Date_of_Birth__c), DAY(Date_of_Birth__c)), 6)</formula>
    <label>Date Turning 59 1/2</label>
    <type>Date</type>
</CustomField>