force-app/main/default/objects/Lead/fields/Date_Turning_65_formula__c.field-meta.xml
<CustomField>
    <fullName>Date_Turning_65_formula__c</fullName>
    <formula>DATE(YEAR(Date_of_Birth__c)+65, MONTH(Date_of_Birth__c), DAY(Date_of_Birth__c))</formula>
    <label>Date Turning 65</label>
    <type>Date</type>
</CustomField>