force-app/main/default/objects/Lead/fields/Disability_in_Retirement__c.field-meta.xml
<CustomField>
    <fullName>Disability_in_Retirement__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Disability in Retirement</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>