force-app/main/default/objects/Lead/fields/dollarROTH__c.field-meta.xml
<CustomField>
    <fullName>dollarROTH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>dollarROTH</label>
    <type>Checkbox</type>
</CustomField>