force-app/main/default/objects/Lead/fields/dollarTSP__c.field-meta.xml
<CustomField>
    <fullName>dollarTSP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>dollarTSP</label>
    <type>Checkbox</type>
</CustomField>