force-app/main/default/objects/Lead/fields/Expected_Retirement_Age__c.field-meta.xml
<CustomField>
    <fullName>Expected_Retirement_Age__c</fullName>
    <formula>ABS(FLOOR((TODAY() - Expected_Retirement_Date__c) / 365.25) - Contact_Age__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Retirement Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>