force-app/main/default/objects/Lead/fields/Expected_Retirement_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Retirement_Date__c</fullName>
    <label>Expected Retirement Date</label>
    <type>Date</type>
</CustomField>