force-app/main/default/objects/Lead/fields/Federal_Employee__c.field-meta.xml
<CustomField>
    <fullName>Federal_Employee__c</fullName>
    <label>Federal Employee?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>