force-app/main/default/objects/Lead/fields/Federal_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Federal_Indicator__c</fullName>
    <formula>IMAGE(
CASE( Federal_Employee__c ,
&quot;Yes&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;No&quot;, &quot;/img/samples/flag_red.gif&quot;,
&quot;/s.gif&quot;),
&quot;Federal Indicator&quot;)</formula>
    <label>Federal Indicator</label>
    <type>Text</type>
</CustomField>