force-app/main/default/objects/Lead/fields/FEGLI_Code__c.field-meta.xml
<CustomField>
    <fullName>FEGLI_Code__c</fullName>
    <label>FEGLI Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>